--- a/11行李准备.md
+++ b/11行李准备.md
@@ -10,7 +10,7 @@
 ※过了第一年，需要在苏黎世交管局办理转驾照手续。转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
 **证件照**：护照规格（35*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但8瑞郎4张，略贵，而且拍出来巨丑
 **现金**：2000左右CHF基本够用。需要注意如果是UZH新生的话请至少准备1000CHF左右的现金用于缴纳第一笔学费，因为交学费的POST似乎没法刷信用卡和银联卡，而那会你也肯定没有办出本地的银行卡
-**手机**：国内手机可用。购买签约机需要先办理居留证，建议国内带一个备用。注意国内与中国移动或联通或电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G。
+**手机**：不用多说，没了它好多事干不了，国内手机可用。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动或联通或电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G。
 
 **银联、信用卡**：关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。
 国内带有VISA/Mastercard/American Express标志的多币种信用卡基本上都能在瑞士消费。有的POS机可以选择币种，选择CHF会便宜一些（国内发卡行的外汇价格比瑞士机构人民币购买价格划算）。注意问清楚发卡行还钱的时候是用人民币即时购汇还是用绑定的国内储蓄卡里的外汇存款还款，因为大部分银行默认是前者。此外，中国银行2015年推出一款可存取外币的银联卡，想把保证金直接存卡里带过来的同学可以考虑这个。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡。
