--- a/11行李准备.md
+++ b/11行李准备.md
@@ -19,7 +19,7 @@
 
 **转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。
 ![](.topwrite/assets/插头.png)
-建议淘宝“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
+建议搜索“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
 需要携带多种国内用电器的话建议顺手带一个插排
 ^
 **ii.推荐携带（日常所需，瑞士有获取渠道，但性价比低或功能受限）**
