--- a/11行李准备.md
+++ b/11行李准备.md
@@ -58,10 +58,12 @@
 **晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月， 会在ETHZ举办欧洲最大学生舞会polyball。
 **旗袍**：可用于文化节或正式的特殊的场合。
 ^
-**v.千万别带（本地可以买到一模一样的，或者过于不便携带）**
+**v.千万别带（本地可以买到一模一样的，或者有入境限制）**
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不贵，再说德国的锅质量也好
 **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买
+**肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士欸
+
 
 
 
