--- a/21交通票.md
+++ b/21交通票.md
@@ -1,5 +1,43 @@
-^
+### 苏黎世交通系统简介
 
+苏黎世的日常出行中于下面三个名字密不可分
+1. 瑞士联邦铁路 [SBB](https://www.sbb.ch/en)
+2. 苏黎世交通网络 [ZVV](https://www.zvv.ch/zvv/en/home.html)
+3. 公交身份卡 [SwissPass](https://www.swisspass.ch/info/welcome)
+
+SBB顾名思义，提供瑞士境内的铁路服务。ZVV可以理解为苏黎世区域所有公共交通提供商的联合会，整合了苏黎世区域铁路，电车，公交，船，缆车等所有公共交通资源。SwissPass是一张实名卡，在SBB和ZVV购买的月票或者年票都可以绑定在这张卡上。
+
+SBB和ZVV各自都有自己的手机APP，二者都可以绑定SwissPass，查询，并购票，使用起来没有显著差别。
+- [SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)
+- [ZVV APP](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)
+
+### 出行思路
+
+#### 日常区域活动 
+
+ZVV使用分区计价的原则([分区地图](https://www.zvv.ch/zvv/en/travelcards-and-tickets/zones/zone-maps.html))。如果一段路程（无论何种交通方式）经过了某个区，那么就需要够买这个区的票。苏黎世110区涵盖了ETH，UZH和市中心最核心的区域，所以如果生活在110区，那么只要办理110区的[区域年票或者月票](https://www.zvv.ch/zvv/en/travelcards-and-tickets/travelcards/networkpass.html)即可。
+
+#### 铁路长途旅行
+
+对于去其它城市的旅行需求，则需要在APP上购买相应的火车票坐火车。此时还有两种卡可以提供优惠。
+1. 半价卡 [Half Fare Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/half-fare-travelcard.html): 所有买票半价
+2. 七点卡 [seven25 Travelcard](https://www.sbb.ch/en/travelcards-and-tickets/railpasses/seven25-travelcard.html)： 适用于25岁及以下，晚上七点到早上五点免费乘车。
+    3.     从2023年六月开始变成 "Night GA Travelcard"。99CHF每年，使用的条件会不会改变还不知道
+
+### 落地后
+
+在入境，取行李全都完成之后，最先要考虑的就是从机场到住的地方，对此，绝大多数人都会选择公共交通。
+因为SwissPass售票处大多开在机场和火车站，所以如果落地的时间刚好开门，那可以顺路去SwissPass办理区域年票，立时生效，之后便可以享受苏黎世的公共交通系统了。详见[办理SwissPass](#办理SwissPass)
+
+如果
+
+#### 办理SwissPass
+
+
+
+### 
+
+> 参考
 > Fun facts about ZVV [link](https://secrets.zvv.ch/)
 > ZVV Tickets: [link](https://www.zvv.ch/zvv/en/travelcards-and-tickets/tickets.html)
 > ZVV Zonemaps: [link](https://www.zvv.ch/zvv/en/travelcards-and-tickets/zones/zone-maps.html)
