--- a/21交通票.md
+++ b/21交通票.md
@@ -7,6 +7,7 @@
 
 SBB顾名思义，提供瑞士境内的铁路服务。ZVV可以理解为苏黎世区域所有公共交通提供商的联合会，整合了苏黎世区域铁路，电车，公交，船，缆车等所有公共交通资源。SwissPass是一张实名卡，在SBB和ZVV购买的月票或者年票都可以绑定在这张卡上。
 
+#### 公交APP
 SBB和ZVV各自都有自己的手机APP，二者都可以绑定SwissPass，查询，并购票，使用起来没有显著差别。
 - [SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)
 - [ZVV APP](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)
@@ -29,11 +30,36 @@ ZVV使用分区计价的原则([分区地图](https://www.zvv.ch/zvv/en/travelca
 在入境，取行李全都完成之后，最先要考虑的就是从机场到住的地方，对此，绝大多数人都会选择公共交通。
 因为SwissPass售票处大多开在机场和火车站，所以如果落地的时间刚好开门，那可以顺路去SwissPass办理区域年票，立时生效，之后便可以享受苏黎世的公共交通系统了。详见[办理SwissPass](#办理SwissPass)
 
-如果
+如果第一时间无法办理SwissPass，那么可以先通过APP或者购票机器买票先去住所，详见[APP](#公交APP)。这些APP使用信用卡支付，可以不绑定SwissPass直接购票
 
 #### 办理SwissPass
 
+SwissPass可以在网点线下办理，需要护照和一张护照照片，还需要提供一个地址用于邮寄交通卡。
+在办理的当天可以得到一个纸质的临时SwissPass，可以在查票时将其出示给查票员。
+十天之内会在信箱里收到邮寄的交通卡, 交通卡卡号可以用来注册和绑定[swisspass.ch](https://www.swisspass.ch/register)的账户。SwissPass账户可以绑定到手机APP中([SwissPass Login](https://www.sbb.ch/en/travelcards-and-tickets/swisspass/swisspass-account.html))
 
+> SwissPass也可以在线上办理其它卡的时候办理，需要手机认证身份，实体卡通过邮寄的方式邮寄到信箱。
+
+办理SwissPass时可以顺便办理前文所述的区域年票或者半价卡等等，这些都可以在同一个柜台完成。[SBB线下网点](https://www.sbb.ch/en/station-services/at-the-station/services-at-the-station/gift-ideas/mondaine/points-of-sale.html)列表:
+- Zurich Airport 苏黎世机场1层 [GoogleMap:SBB Reisezentrum](https://goo.gl/maps/v1efYctGYJcWsb3P9)
+- Zurich main station 火车站0层 [GoogleMap:SBB Counter](https://goo.gl/maps/JTy8Kee2fbZ5SigC9)
+
+#### 额外说明
+
+公交区划: [详见地图](https://www.zvv.ch/zvv/en/travelcards-and-tickets/zones/zone-maps.html)
+- 110区是苏黎世的核心区域，在计算票价/购买区票的时候，算作两个区。同样是大区的还有120区
+- 机场不在110区，所以如果往返机场请记得买票
+
+
+>没有办理流程的专门链接，这里附上[QA](https://www.sbb.ch/en/help-and-contact/produkte-services/swisspass.html#anchor3): 
+**SwissPass card with a travelcard.**
+When you purchase a public transport travelcard that can be held on the SwissPass for the first time, you will receive your SwissPass card with the travelcard automatically and free of charge. You can purchase your new travelcard on the SwissPass both online and at any staffed public transport point of sale. 
+Your identity will be verified when you make the purchase. When purchasing at a point of sale, you must present a passport or ID card to verify your identity. Please also bring a recent passport photo along with you.
+When purchasing online, the identity check forms part of the purchasing process. To complete the check, you will need a passport or an ID card and a smartphone with a camera. You will also need a recent, high-quality, digital passport photo.
+Online purchase with an identity check is not possible for other persons.
+Questions on the identity checkLink opens in new window.
+**SwissPass card without a travelcard.**
+You can also get the SwissPass for free without a travelcard from public transport points of sale, meaning you can then benefit from our partner services. In order to obtain your SwissPass, please bring a valid ID card (or other official identity document) and a recent passport photograph with you.
 
 ### 
 
