--- a/13机票.md
+++ b/13机票.md
@@ -1,4 +1,4 @@
-#### 1. 重要提醒
+#### **1. 重要提醒**
 
 **1.1 买机票一定要提前！提前！提前**！
 
@@ -22,7 +22,7 @@
 ^
 ^
 
-#### 2. 机票选项
+#### **2. 机票选项**
 
 **2.1 直飞机票**
 
@@ -41,7 +41,7 @@
 ^
 ^
 
-#### 3. 推荐航班
+#### **3. 推荐航班**
 
 注意：以下信息于2023年4月中旬基于Skyscanner及Flightware历史数据整理，机票时间均为2023年8月中下旬，请注意时效性；另外由于航班信息波动极大，以下推荐仅供参考，不保证等你买的时候还能买得到/还是一样的价格，也不保证它们届时一定是最优的选择；最后，每个人的经济条件及对转机次数/耗时的接受程度不同，以下推荐并不一定适合所有人，请根据实际情况自行考虑选择航班
 
