--- a/11行李准备.md
+++ b/11行李准备.md
@@ -27,7 +27,7 @@
 ※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多。
 **眼镜**：1-2副备用。在瑞士价格较贵。墨镜在日常阳光下可满足护眼需求，上雪山时则为生存必须。爱运动的同学也推荐从国内购买泳镜。尤其是近视泳镜，苏黎世及周边边境城市都没有卖。
 **日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。
-厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；15年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
+厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
 **常用药物**：根据自己的情况携带对应药物，另外建议携带常用药物如云南白药、腹可安、喇叭正露丸等以备不时之需。
 抗生素也建议携带一些以备不时之需，因为这边的药店没有医生处方是不会售卖抗生素的，而医生非必要一般也不会开抗生素
 **创可贴**：建议准备一些以防万一，在瑞士大家的课余生活经常涉及到爬山或者远足之类的，这玩意的需求量可能比你想象的大
@@ -63,4 +63,5 @@
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不贵，再说德国的锅质量也好
 **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
+**中草药**：同上，可能会被当成违禁品
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士欸
