--- a/24找房租房.md
+++ b/24找房租房.md
@@ -38,8 +38,17 @@ d. 找房租房
 | WFSS            | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                       |
 | 学校推荐网站          | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
 | ST-JUSTIN       | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
-| INTERMEZZO      | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                |                                                                 |
+| INTERMEZZO      | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，vx号：Alex\_Intermezzo                           |
 | 群内转租            |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                          |                                                                 |
+
+\* INTERMEZZO
+
+房型：2.5的studio到4.5的三人或四人合租flat及8人以上合租的独栋湖景别墅。
+房源：主要在苏黎世市区，靠近UZH,ETH,ZHAW等主校、Oerlikon、Irchel、ETH hongerberg附近。
+价格：650-1200瑞士法郎每月，押二付一，灵活终止合同，先住后付，不需提前支付任何费用。房费包含水电网暖费用，提供家具，厨房设备（洗碗机、烤箱、锅碗瓢盆），洗衣房。
+申请流程为：确定需求；填写申请表；签署合同；入住对接；押租金。
+
+^
 
 2\. 其他渠道
 [www.wg.zimmer.ch ](http://www.wg.zimmer.ch )
