--- a/24找房租房.md
+++ b/24找房租房.md
@@ -68,6 +68,10 @@ forum.swissinfo.ch
 
 ^
 
+p.s. 学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程。同学们在其中产生的问题，后果自负。预祝大家都能找到合适的房子。
+
+^
+
 **iv. 租房注意事项**
 
 &#x20;1\. 所租房子是否可注册地址。
@@ -76,7 +80,7 @@ forum.swissinfo.ch
 
 &#x20;3\. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/。
 
-&#x20;4\. 押金最好交到公用账户，若是私人账户，需谨慎。
+&#x20;4\. 押金最好交到公用账户，若是私人账户，需谨慎。要求提前交押金的需谨慎，事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
 
 &#x20;5\. 尽量选择线下签合同，线上签合同需谨慎。
 
@@ -89,6 +93,10 @@ forum.swissinfo.ch
 &#x20;9\. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF。
 
 &#x20;10\. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大。
+
+11\. 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
+
+（部分资料来源：学联论坛）
 
 ^
 
