--- a/11行李准备.md
+++ b/11行李准备.md
@@ -5,7 +5,7 @@
 
 **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件。
 ※ 中国驾照在一年内配合有效认证/公证翻译文件，在瑞士是有效的。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租租车网站上有一个“国际驾照认证件”，据说被认可度很高。
-※过了第一年，需要在苏黎世交管局办理转驾照手续。转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
+※在苏黎世的第一年，建议在苏黎世交管局办理转驾照手续。如果没有在一年内办理转驾手续，转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
 **证件照**：护照规格（35\*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但8瑞郎4张，略贵，而且拍出来巨丑
 **现金**：2000左右CHF基本够用。需要注意如果是UZH新生的话请至少准备1000CHF左右的现金用于缴纳第一笔学费，因为交学费的POST似乎没法刷信用卡和银联卡，而那会你也肯定没有办出本地的银行卡
 **手机**：不用多说，没了它好多事干不了，国内手机在这边使用没问题。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动或联通或电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G。
@@ -13,10 +13,9 @@
 **银联、信用卡**：关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡。
 ※瑞士不会有银行通过邮件方式通知你账号有异常情况，任何以银行名义给你发的邮件建议统统删除
 
-**转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。
+**转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。，当地买很贵。或者买一个带瑞士插头的拖线板。
 ![](.topwrite/assets/插头.png)
 建议搜索“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
-需要携带多种国内用电器的话建议顺手带一个插排
 
 ^
 
@@ -26,7 +25,7 @@
 **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
 ※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多。
 **眼镜**：1-2副备用。在瑞士价格较贵。墨镜在日常阳光下可满足护眼需求，上雪山时则为生存必须。爱运动的同学也推荐从国内购买泳镜。尤其是近视泳镜，苏黎世及周边边境城市都没有卖。
-**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。
+**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。
 厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
 **常用药物**：根据自己的情况携带对应药物，另外建议携带常用药物如云南白药、腹可安、喇叭正露丸等以备不时之需。
 抗生素也建议携带一些以备不时之需，因为这边的药店没有医生处方是不会售卖抗生素的，而医生非必要一般也不会开抗生素
