--- a/11行李准备.md
+++ b/11行李准备.md
@@ -20,7 +20,7 @@
 ^
 
 **ii.推荐携带（日常所需，瑞士有获取渠道，但性价比低或功能受限**）
-**插线板**：搭配转换插头使用。国内带来的电器可用，瑞标和欧标的两脚插头也可用。
+**插线板**：搭配转换插头使用。国内带来的电器可用，瑞标和欧标的两脚插头也可用。如果需要携带多个带国内插头的用电器的话插线板最好带上，省得一两个转换插头换来换去。
 **电子配件**：移动硬盘，U盘，充电线，充电宝等，注意充电宝建议自备一个，瑞士本地能买到的充电宝大都贵得离谱而且质量还没有国内牌子好（而且大概率还是Made in China）
 **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
 ※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多。
@@ -29,7 +29,6 @@
 厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
 **常用药物**：根据自己的情况携带对应药物，另外建议携带常用药物如云南白药、腹可安、喇叭正露丸等以备不时之需。
 抗生素也建议携带一些以备不时之需，因为这边的药店没有医生处方是不会售卖抗生素的，而医生非必要一般也不会开抗生素
-**创可贴**：建议准备一些以防万一，在瑞士大家的课余生活经常涉及到爬山或者远足之类的，这玩意的需求量可能比你想象的大
 
 ^
 
@@ -51,7 +50,7 @@
 
 **iv.爱带不带（瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带**）
 
-**电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在这边保修的可能
+**电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
 **正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。
 **晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月， 会在ETHZ举办欧洲最大学生舞会polyball。
 **旗袍**：可用于文化节或正式的特殊的场合。
@@ -59,7 +58,7 @@
 ^
 
 **v.千万别带（本地可以买到一模一样的，或者有入境限制**）
-**各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不贵，再说德国的锅质量也好
+**各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
 **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **中草药**：同上，可能会被当成违禁品
