Update 24找房租房.md, 32医疗相关.md, 33心理咨询.md

--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -88,7 +88,7 @@ iii. 急诊
 
 ETH主校对面的Universitätsspital Zürich (University Hospital of Zürich) 就可以急诊。急诊入口不在大门处，需要从边上绕过去。就诊时务必提前准备好个人信息、健康保险证件、个人身份证明和就诊需求。
 
-如果没有特别紧急的情况，建议少去急诊，这边急诊比较慢。
+如果没有特别紧急的情况，建议少去急诊，这边急诊比较慢。除昏迷、失去意识、大出血等情况，一般需等候3-4小时。或者可以去permanence。
 
 ^
 
