--- a/33心理咨询.md
+++ b/33心理咨询.md
@@ -1,1 +1,23 @@
-^
+3\. 3 心理咨询
+
+ETH与 UZH为在读的同学们提供免费的心理辅导，每次的心理辅导时长为50分钟左右，语言可选择德语或英语。详情可以在以下网站查看<https://www.pbs.uzh.ch/en.html>。
+
+1\.  预约
+
+电话 044 634 22880 或者e-mail <pbs@sib.uzh.ch>
+
+预约时需同时递交申请表<https://www.pbs.uzh.ch/dam/jcr:a99b7a87-293e-4ff1-ab79-05ca411e28fe/Name_Vorname.pdf>
+
+\* 注意学校的心理辅导中心提供的是心理辅导，而非心理或神经科治疗，如果需要专业的治疗可以通过学校的心理辅导中心寻找心理医生进行治疗。
+2\. 下面的网址链接可以了解到学校心理辅导人员的基本情况：
+
+<https://www.pbs.uzh.ch/de/ueber-uns/teampbs.html>
+
+UZH的学生可以通过以下链接了解更多关于心理辅导以及其他方面的建议的信息：
+
+<https://www.uzh.ch/studies/infoadvice/advice>
+
+ETH的学生可以通过以下链接了解更多关于心理辅导以及其他方面的建议的信息：<https://www.ethz.ch/studierende/de/beratung>
+
+此外，哥大MAE中国学联联系了一些医院搭建了一个针对留学生的免费/低价心理咨询平台，可以关注FOR STORY公众号。
+在校外接受治疗时需区分精神科医生psychiatrist和心理医生psychologist：前者可以开处方药，后者不可。目前瑞士的基础医保覆盖了心理辅导，但仍然需要先有医生的处方（例如精神科医生）。目前苏黎世大多数诊所同时有精神医生和心理医生，如果同学实在不确定，可以通过学校的心理辅导中心预约医 生，或在就诊前让诊所或主治医生打电话给保险公司确认。
