--- a/24找房租房.md
+++ b/24找房租房.md
@@ -80,13 +80,15 @@ p.s. 学联只提供信息整理，对以上所有租房平台仅做推荐，不
 
 &#x20;3\. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/。
 
-&#x20;4\. 押金最好交到公用账户，若是私人账户，需谨慎。要求提前交押金的需谨慎，事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
+&#x20;4\. 押金最好交到公用账户，若是私人账户，需谨慎。任何未签合同交押金的行为都是骗子!
+
+提前交押金的需谨慎，事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
 
 &#x20;5\. 尽量选择线下签合同，线上签合同需谨慎。
 
 &#x20;6\. 提前与房东敲定交钥匙时间。
 
-&#x20;7\. 入住时，将房屋内破损处全部拍照留档，并告知房东，以免退租时出现不必要的纠纷。
+&#x20;7\. 入住时，将房屋内破损处全部拍照留档，并告知房东，以免退租时出现不必要的纠纷。并购买第三方责任险，退房有意外保险会赔付。
 
 &#x20;8\. 尽量选择能够长租的房子，搬家真的很麻烦！若是短租，需谨慎。
 
