--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -4,4 +4,8 @@
 
 ^
 
-:-: **苏黎世中国学生学者联合会ACSSZ**
+:-: 苏黎世中国学生学者联合会
+
+:-: Association of Chinese Students and Scholars in Zurich
+
+:-: Assoziation der Chinesischen Studierenden und Gelehrten in Zürich
