--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,1 +1,55 @@
+#### 1. 申请签证的时间
+
+在收到录取通知书后，就可以开始准备申请签证的材料，eth官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。
+
+
+#### 2. 申请材料
+
+大体来说申请材料有以下几项（**但请详细阅读学校给出的清单**） ，清单表（可以在ETH的链接里下载）
+
+* 申请表（national type D visa，链接中有下载表）
+* 护照（注意护照有效期）
+* 护照照片
+* 学校确认信
+* 简历（需注明语言水平）
+* 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
+* 动机信和毕业计划
+* 银行存款（必须是在瑞士有支行的银行）
+
+**请详细阅读学校给出的清单**：
+
+> **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
+>
+> ^
+>
+> **UZH要求的申请材料**
+>
+> <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
+
 ^
+
+#### 3. 几点特别注意的！
+
+* 注意不要用旅游签证进入瑞士
+* 如下申请材料仅针对canton Zurich 的学校
+* 存款必须存在自己的名下，不可以存在父母名下
+
+^
+
+#### 4. 如有问题？
+
+给学校的international student office发邮件
+
+^
+
+#### 5. 在哪里递交签证材料
+
+<https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
+
+瑞士在中国一共有四个领事馆，分别为：广州、香港、上海和成都，以上链接含有领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
+
+^
+
+#### 6. 如何预约递交签证材料
+
+可以在准备材料的同时就查看以下网站。另对邮寄申请材料有详细说明。[ttps://visa.vfsglobal.com/chn/zh/che/](https://visa.vfsglobal.com/chn/zh/che/)
