Update .topwrite/assets/image_1682191526512.png, .topwrite/assets/image_1682191920709.png, .topwrite/assets/image_1682191965158.png, .topwrite/assets/image_1682192038118.png, 00欢迎页.md, 01行前准备.md, 02落地事项.md, 10申请签证.md, 10行李丢失处理.md, 11国内手机号.md, 11行李准备.md, 12国内银行卡.md, 13机票.md, 14“云”找房.md, 15新生材料c-o寄存.md, 21交通票.md, 22prepaid电话卡.md, 23学校注册.md, 24找房租房.md, 25Kreisbüro报到.md, 26瑞士银行卡.md, 27保险及豁免.md, ETH注册.md, SUMMARY.md, UZH注册.md Delete 29Postpaid电话卡.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,11 +1,12 @@
-#### 1. 申请签证的时间
+#### **1. 申请签证的时间**
 
 在收到录取通知书后，就可以开始准备申请签证的材料，eth官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。
 
+^
 
-#### 2. 申请材料
+#### **2. 申请材料**
 
-大体来说申请材料有以下几项（**但请详细阅读学校给出的清单**） ，清单表（可以在ETH的链接里下载）
+大体来说申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
 
 * 申请表（national type D visa，链接中有下载表）
 * 护照（注意护照有效期）
@@ -28,7 +29,7 @@
 
 ^
 
-#### 3. 几点特别注意的！
+#### **3. 几点特别注意的**！
 
 * 注意不要用旅游签证进入瑞士
 * 如下申请材料仅针对canton Zurich 的学校
@@ -36,13 +37,13 @@
 
 ^
 
-#### 4. 如有问题？
+#### **4. 如有问题**？
 
 给学校的international student office发邮件
 
 ^
 
-#### 5. 在哪里递交签证材料
+#### **5. 在哪里递交签证材料**
 
 <https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
 
@@ -50,6 +51,6 @@
 
 ^
 
-#### 6. 如何预约递交签证材料
+#### **6. 如何预约递交签证材料**
 
 可以在准备材料的同时就查看以下网站。另对邮寄申请材料有详细说明。[ttps://visa.vfsglobal.com/chn/zh/che/](https://visa.vfsglobal.com/chn/zh/che/)
