--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -1,1 +1,43 @@
+如果需要，请同学们**提前设置最低月费保号套餐**和**开通国际漫游以便于在瑞士接收短信**。
+
 ^
+
+#### **1. 最低月费保号**
+
+目前三大运营商最低的月租套餐是：
+
+* 移动保号套餐是8元套餐分语音版和流量版（部分地区只有8元飞享套餐不包括通话流量）
+* 联通保号套餐是联通8元流量王套餐&#x20;
+* 电信保号套餐是电信无忧卡5元
+
+想改保号套餐的可直接关注移动/电信/联通官方公众号，找到人工客服（也可公众号直接打字人工客服发送）要求更改对应套餐。
+
+最好预充足够费用（按年计，出国多少年就充多少钱），以便运营商每月能顺利扣费，避免由于遗忘等原因导致手机号长期欠费被销号。当然，支付宝，微信随用随充也不是不可以。
+
+^
+
+#### **2. 国际漫游**
+
+三大运营商漫游业务均至瑞士，开通国际漫游业务可通过人工客服或者点击相关公众号服务开通，具体资费情况（如电话，短信，流量，日收费上限等）可查看官方公众号及网页。
+
+* 电信：
+
+漫游公众号：中国电信国际及港澳台漫游（开通漫游，流量包办理，资费查询等）
+
+境外国漫服务专线：+86 18918910000
+
+* 移动：
+
+漫游公众号：中国移动国际漫游（开通漫游，多种流量及长途业务办理，业务资费等）
+
+境外国漫服务专线：+86 13800100186  或 +86 10086
+
+* 联通：
+
+漫游公众号：中国联通（点击链接到网上营业厅，左侧栏国际漫游）
+
+境外国漫服务专线：+86 18618610010
+
+^
+
+其他如果手机套餐绑定了宽带，需要带上身份证（和供应商提供的路由器）去营业厅先办理解绑，再办理最低保号套餐。具体可人工咨询或咨询当地营业厅。
