--- a/11行李准备.md
+++ b/11行李准备.md
@@ -1,7 +1,6 @@
-^
-^
+#### **1. 必备物品**
 
-**i.必备物品（不带这些你出来干啥\~瑞士没有获取渠道**）
+（不带这些你出来干啥\~瑞士没有获取渠道）
 
 **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件。
 ※ 中国驾照在一年内配合有效认证/公证翻译文件，在瑞士是有效的。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租租车网站上有一个“国际驾照认证件”，据说被认可度很高。
@@ -14,12 +13,15 @@
 ※瑞士不会有银行通过邮件方式通知你账号有异常情况，任何以银行名义给你发的邮件建议统统删除
 
 **转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。，当地买很贵。或者买一个带瑞士插头的拖线板。
-![](.topwrite/assets/插头.png)
+![](.topwrite/assets/插头.png =251)
 建议搜索“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
 
 ^
 
-**ii.推荐携带（日常所需，瑞士有获取渠道，但性价比低或功能受限**）
+#### **2. 推荐携带**
+
+（日常所需，瑞士有获取渠道，但性价比低或功能受限）
+
 **插线板**：搭配转换插头使用。国内带来的电器可用，瑞标和欧标的两脚插头也可用。如果需要携带多个带国内插头的用电器的话插线板最好带上，省得一两个转换插头换来换去。
 **电子配件**：移动硬盘，U盘，充电线，充电宝等，注意充电宝建议自备一个，瑞士本地能买到的充电宝大都贵得离谱而且质量还没有国内牌子好（而且大概率还是Made in China）
 **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
@@ -32,7 +34,9 @@
 
 ^
 
-**iii.可以考虑携带（不是日常生活必须，但偶尔能用上，瑞士有购买渠道**）
+#### **3. 可以考虑携带**
+
+（不是日常生活必须，但偶尔能用上，瑞士有购买渠道）
 
 **旅行装洗漱用品**：到达瑞士的最初几天应急用。
 **小电饭煲**：没了它煮米饭得累死，不过电饭煲在各种亚超和二手群里面一般很容易找到，实在不行去本地的小米专卖店买一个也行（千万别买本地的牌子，其匮乏且不可靠的功能堪称智障）
@@ -48,7 +52,9 @@
 
 ^
 
-**iv.爱带不带（瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带**）
+#### **4. 爱带不带**
+
+（瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）
 
 **电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
 **正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。
@@ -57,9 +63,12 @@
 
 ^
 
-**v.千万别带（本地可以买到一模一样的，或者有入境限制**）
+#### **5. 千万别带**
+
+（本地可以买到一模一样的，或者有入境限制）
+
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
 **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **中草药**：同上，可能会被当成违禁品
-**瑞士军刀**：拜托搞搞清楚你来的是瑞士欸
+**瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
