--- a/13机票.md
+++ b/13机票.md
@@ -1,42 +1,53 @@
-### **1. 重要提醒**
+#### **1. 重要提醒**
 
-#### **1.1 买机票一定要提前！提前！提前**！
+**1.1 买机票一定要提前！提前！提前**！
 
 目前来瑞士留学的中国留学生数量相比前几年有所增加，临近9月份开学季机票会非常紧张，价格也会经常波动，关于到底要提前多久，我的建议是尽量在签证问题解决后马上把机票买好，最晚最晚到八月初你也应该已经把机票确定下来了。买早了也许你会错过少量后续放出的廉价机票，但买晚了会陷入很大的被动。
 
 ^
 
-#### **1**.**2 机票的到达日期需要在签证生效日期范围里**
+**1.2 机票的到达日期需要在签证生效日期范围里**
 
 没错，所以我并不建议签证办好之前就买机票。一定要把签证生效的起始日期记清楚，不然到了苏黎世场发现签证还没生效，被海关请进小黑屋喝茶了就很尴尬了。
 
 ^
 
-#### **1.3 关于机票的出发和到达时间**
+**1.3 关于机票的出发和到达时间**
 
 出发时间国内比较容易把握，可以随意一些。但是到达时间最好不要太晚，最理想的是当地时间上午或中午到达，这样还可以腾出一个下午的时间，趁着各种机构还没下班，先去办一些手续或者采购一些商品。最晚建议不要超过晚上8点到达，届时等你从机场走出来很多店铺已经关门了，公共交通班次也会减少，再加上苏黎世机场到城区还有一段不短的路程，到达时间太晚的话无论是找房子、和房东交接还是其他的一些落地事宜都会非常不方便。
 
 ^
 
-#### **1.4 碰到合适的机票请果断出手**
+**1.4 碰到合适的机票请果断出手**
 
 这点对于买机票比较晚的同学们尤为重要。当看到时长少于20h，价格相对较低，到达时间也不算太晚的机票的话就不要犹豫，尽快下手。无数前辈们都有过在各种机票和航司里面比来比去，挑三拣四，结果得出结论的时候几个选择都已经售罄，最后不得不买了一张还不如之前那些选择的经历。
 
 ^
-^
 
-### **2. 机票选项**
+#### **2. 机票选项**
 
-#### **2.1 直飞机票**
+**2.1 直飞机票**
 
 目前国内前往苏黎世的直飞机票仅有上海浦东出发的瑞士航空公司LX189航班，全程耗时约14h，缺点是价格较为昂贵（目前价格为￥8500左右，会有波动）而且经常供不应求。而且到达时间19：30说实话稍微晚了点。
 
 ^
 
-#### **2.2 转机机票**
+**2.2 转机机票**
 
 这个选择就比较五花八门了，不过可以确定的是出发地基本都在北京、上海、广州、香港这四个地方中的一个。从国内其他地方出发的话基本也要到这几个地方转。像杭州之类的部分城市虽然也有到苏黎世的机票，但选择往往没有上述四个那么丰富。
+
+^
+
 一般建议就近，结合国内城市间交通的开销选择出发地即可。四个出发地的机票在价格、耗时、转机次数等方面并没有什么特别明显的区别，一定要说有什么不同的话，广州和香港出发的航班基本都是在东南亚、阿拉伯半岛以及东欧转机，而北京和上海出发的航班有很多是在西欧转机（并没有什么大的影响）。不过两广地区的同学有条件的话最好去香港坐，选择会比广州出发多很多。
+
+^
+
 关于如何买到便宜的机票，说实在由于机票价格的大幅波动和不可预见性，我也不能给大家一个确切的答案，不过大体来说，同样日期，转机次数越多、耗时越长、出发和到达时间越晚的机票，价格越便宜。大家需要做的是结合自己的经济条件和对麻烦的接受程度，在这几个因素里面找到一个平衡点。从而买到适合自己机票（怎么感觉说了和没说似的）。当然上述规则并不绝对，偶尔你也能够找到又便宜又不麻烦的航班，这种时候就像我上面所说的那样，需要抓紧下手了，一般这种机票会被很快抢光。另外，避开8、9月份的高峰期，时间较早的机票价格也会相对便宜。但别忘了早过去的话同时也意味着要多一段时间生活在瑞士的高物价环境里了。
+
+^
+
 还有一个值得一提的点是留学生票（具体请查看各航空公司官网），如俄航、汉莎、卡塔尔和阿联酋等不少航司会专门提供留学生票，这种机票除了价格上会有一定优惠之外，往往还会提供额外的托运行李额，这点对于需要带好几个箱子的同学可以说是量身定制了，因为额外购买行李额也是一笔不小的开销（不过有时候机场的工作人员看你是留学生也会免费帮你多托运一些额度，看运气）。目前各大购票网站上如果有留学生票可购买的话都会特地标明。如果你选择的航班没有留学生票选项的话，你也可以尝试直接给相应的航空公司打电话/发邮件，并提供你的录取通知书，询问该次航班是否可购买留学生票，如果有的话直接通过航空公司订购机票。
+
+^
+
 最后，查机票的软件除国内常用软件外还建议使用Skyscanner或google flight (需要翻墙)，相比于其他同类APP无论是选择范围，排序智能程度还是可操作性方面都要优秀许多，可以帮助你更高效地完成机票的选购。
