--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -1,1 +1,27 @@
+* Student Village: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
+* Living Sceinece: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
+* 学生WOKO：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
+* 学生JUWO: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
+* 其他WG租房网站：
+
+> <https://www.wohnen.ethz.ch/en/search-accommodation.html>
+>
+> <https://www.wgzimmer.ch/wgzimmer.html>
+>
+> <http://www.marktplatz.uzh.ch/Biete/wohnungen>
+>
+> <http://www.students.ch/wohnen/list >
+>
+> <https://wohnen.ethz.ch/index.php?act=searchoffer>
+>
+> <https://en.comparis.ch/immobilien/search>
+>
+> <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
+
+* 学联论坛上租房信息：[https://forum.acssz.org/](https://forum.acssz.org/t/house)
+
+^
+
+如果可以，请翻墙上google，输入关键词“zurich rent room”或者“zurich rent apartment“ 即可。
+
 ^
