--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -1,4 +1,4 @@
-**实体银行**：
+#### **1. 实体银行**
 
 |          | UBS                                                                                                                                                                                            | PostFinance                                                                                                                                                              | ZKB                                                                                                                                            |
 | -------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -12,16 +12,35 @@
 | 汇率       | Mastercard exchange rate + 0.5% 有评价是比较吃亏，但无processing fee                                                                                                                                      | PostFinance自己的汇率，有评价是比较实惠，且转账给欧元区免费                                                                                                                                      | ZKB自己的汇率，有评价是一般，但转账给欧元区免费                                                                                                                      |
 | 其它注意事项   | 如果能选debit card类型，尽量选Visa 或者 Mastercard Debit Cards，另外两种（V PAY 或者 Maestro Debit Cards）功能少一些                                                                                                     |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
 
+^
+
 **Bank Cler**：
 优点：境外使用虚拟卡Virtual Prepaid VISA card无手续费，转账进账户可获优惠券
 缺点：网页无英语版，无学生账户，开户填完文件后需要审核，ATM机较少
 
-**Credit Suisse**：不清楚之后政策会如何变化。
+^
 
-**虚拟银行**：无实体店面，主要通过手机app完成操作。
+**Credit Suisse**：
+
+不清楚之后政策会如何变化。
+
+^
+
+#### **2. 虚拟银行**
+
+无实体店面，主要通过手机app完成操作。
+
+^
+
 **Revolut**：有四种等级的账户，**standard**账户无月费。每月**免费取现限额200瑞法**。似乎无实体卡（有的话是叫Revolut card的debit card, 需要先付一笔**运费**），但有**虚拟卡**（一般是Visa或者Maestro的credit card，不可选）。每月**免费换汇限额1000瑞法**。如**账户主货币是瑞法**，在瑞士内部用瑞法转账是免费的。每月可免费在欧洲内部用欧元转账**一次**。用美元向欧洲以外其它地区转账手续费为3瑞法一次，用其它货币5瑞法一次。Plus、Premium和Metal有月费，但功能更多，限额更高。据说不太稳定，不推荐放很多钱在Revolut账户上。但因为可生成一次性虚拟卡，适合用来在比较可疑的网站上付费。
-Yuh：账户无月费。可免费得到实体卡（Yuh Mastercard）。每月**一次免费取现**。**国外取现4.9瑞法一次**。**欧洲内部其它货币转账4瑞法一次**。储蓄利息：25000瑞法/欧元/美元以下：0.75%，25000瑞法/欧元/美元以上：0.5%。据说它的欧元卡比较推荐，似乎比Revolut稳定一些。
-N26：**不支持瑞法**。有两种账户，Standard无月费，Smart月费4.9欧元。主要区别在于Smart账户必然包含实体卡，Standard可选（可能需要付**运费**）。都包含virtual debit MasterCard。Standard每月**免费取现3次**，Smart5次。**每天转账限额2500欧元，每月20000欧元。每天取现限额2500欧元，每月20000欧元**。可免费在欧洲内部用欧元转账。向欧洲以外其它地区转账用的是Wise的服务，**手续费在0.5%-1.5%这个范围内**。
+
+^
+
+**Yuh**：账户无月费。可免费得到实体卡（Yuh Mastercard）。每月**一次免费取现**。**国外取现4.9瑞法一次**。**欧洲内部其它货币转账4瑞法一次**。储蓄利息：25000瑞法/欧元/美元以下：0.75%，25000瑞法/欧元/美元以上：0.5%。据说它的欧元卡比较推荐，似乎比Revolut稳定一些。
+
+^
+
+**N26**：**不支持瑞法**。有两种账户，Standard无月费，Smart月费4.9欧元。主要区别在于Smart账户必然包含实体卡，Standard可选（可能需要付**运费**）。都包含virtual debit MasterCard。Standard每月**免费取现3次**，Smart5次。**每天转账限额2500欧元，每月20000欧元。每天取现限额2500欧元，每月20000欧元**。可免费在欧洲内部用欧元转账。向欧洲以外其它地区转账用的是Wise的服务，**手续费在0.5%-1.5%这个范围内**。
 
 ^
 
