--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -1,1 +1,9 @@
+#### **1. 瑞士的医疗保险**
+
+根据瑞士医疗保险法，在瑞士的**每位居民**均有义务购买基本医疗保险。针对外国留学生，许多保险公司均有推出优惠的**VVG**医疗保险。如果在入境三个月内没有购买，政府很有可能给你选择一款**KVG**保险（>300瑞郎/月），所以希望同学们千万不要忘记，及时去办理医疗保险。
+
+^
+
+保险公司每月的保费会根据具体买的保额变化而变化，例如无年免赔额，年免赔额500瑞郎；根据年龄不同还会有一定的价格差别。除了基本医疗保险外，同学们还可以购买附加保险，包括附加的舒适医疗(比如住院期间享受私人或半私人单间的待遇)，或更多附加福利(如免费使用救护车，中医，牙医等)。
+
 ^
