--- a/12国内银行卡.md
+++ b/12国内银行卡.md
@@ -1,1 +1,45 @@
+瑞士境内所有ATM终端、近95%商户已支持银联卡；
+
+最好办理带芯片的银行卡，带磁条的卡会出现很多店铺无法使用的情况。
+
+^
+
+#### **1. 中国银行长城留学借记卡**
+
+<https://www.boc.cn/bcservice/bc2/201704/t20170426_9329829.html>
+
+**优点**：
+
+* 取现便利：使用该卡在中国银行合作银行的ATM机上取现瑞士法郎，每月有一次机会免费取现。如UBS，Credit Swisse，PostFinance, Raiffeisen bank, ZKB, Luzerner Kantonalbank, Valiant Bank 等ATM机。
+* 免年费：不需要支付任何年费，降低了留学生的使用成本；
+* 外币兑换： 可在手机APP上面根据实时汇率进行结汇购汇。
+* 跨境转账方便：留学生可以通过该卡方便地进行跨境汇款和转账，方便快捷；
+* 账户管理灵活：持卡人可以通过手机银行、网上银行等渠道方便地管理卡账户，包括查询余额、交易明细等。
+
+**缺点**：
+
+* 无信用额度：中国银行长城留学借记卡是一张借记卡，没有信用额度；
+* 限制：此芯片卡有些店不支持使用。另需注意交易限额、取现限额等限制；
+* 取现手续费较高：使用该卡在非中国银行的ATM机上取现时，会收取一定的手续费，费用较高。
+
+^
+
+#### **2. 招商银行VISA全币信用卡**
+
+<https://market.cmbchina.com/ccard/quanbika/>
+
+**优点**：
+
+* 全币种覆盖：招商银行全币种信用卡可以适用于各种场景，可以方便的满足不同消费需求。
+* 多种福利：招商银行全币种信用卡有丰富的福利，例如优惠活动、积分兑换等，可以为持卡人提供更多的价值。
+* 较高的信用额度：招商银行全币种信用卡在信用评估时，可以根据客户的个人情况、信用记录、收入情况等多方面考虑，给予相对较高的信用额度。
+* 方便快捷的在线服务：招商银行全币种信用卡提供了方便快捷的在线服务，包括手机银行、网上银行、自助终端等多种途径，方便持卡人查询账户信息、还款、兑换积分等。
+* 信用卡年费：免收年费。
+* 目前暂未经历过此芯片卡不能使用的情况。
+
+**缺点**：
+
+* 信用卡利息：如果持卡人没有及时还款或者透支，招商银行全币种信用卡的利息比较高，需要持卡人承担一定的成本；
+* 额外手续费：在一些特殊情况下，例如提现、透支等，招商银行全币种信用卡会收取额外的手续费，需要持卡人注意避免。
+
 ^
