--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -1,9 +1,73 @@
-#### **1. 瑞士的医疗保险**
+以下信息资料主要来自ETH官网相关页面
 
-根据瑞士医疗保险法，在瑞士的**每位居民**均有义务购买基本医疗保险。针对外国留学生，许多保险公司均有推出优惠的**VVG**医疗保险。如果在入境三个月内没有购买，政府很有可能给你选择一款**KVG**保险（>300瑞郎/月），所以希望同学们千万不要忘记，及时去办理医疗保险。
+> <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/faq-krankenversicherung.html><https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html>
+
+#### \*\*\*\*
+
+#### **1. 强制保险义务与时间框架**
+
+**健康保险在瑞士是强制性的吗**？
+是的。任何在瑞士逗留超过3个月的人都必须购买健康保险。确保你有足够的保险是你自己的责任。
+
+**如果我在3个月内没有购买健康保险会怎样**？
+你将被强制投保，也就是说，你将被当局分配到一个健康保险基金。这时，每月的保险费通常是**几百瑞士法郎**——不要错过3个月的最后期限!
+
+**如果我在3个月后才投保健康保险，我可以省钱吗**？
+不能，保险合同必须追溯到入境之日。   
+
+**如果我在投保健康保险之前生病或发生事故会怎样**？
+
+你在事故/疾病发生后选择的保险将追溯到你。所有的健康保险公司都有义务将你纳入基本保险，而无需进行健康检查。如果你想购买学生保险套餐（根据VVG），我们建议你在抵达后尽快办理。
+
+我可以在出发前申请瑞士健康保险吗？
+
+不可以，你应该等到你到达瑞士并申请了居留证之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
+
+如果你住在苏黎世市，当你在区政府登记居留证时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考我们的下载样本信（PDF，1.7 MB） vertical\_align\_bottom。 
+
+如果你不是住在苏黎世市，程序因市镇的不同而不同。当你注册居留证的时候，你也应该询问那里关于医疗保险的通常程序。
+
+我想了解更多关于瑞士医疗保险的信息。我在哪里可以得到更多信息？
+
+联邦公共卫生局提供了一本内容非常丰富的小册子 "外部网页You ask - we answercall\_made"。 
 
 ^
 
-保险公司每月的保费会根据具体买的保额变化而变化，例如无年免赔额，年免赔额500瑞郎；根据年龄不同还会有一定的价格差别。除了基本医疗保险外，同学们还可以购买附加保险，包括附加的舒适医疗(比如住院期间享受私人或半私人单间的待遇)，或更多附加福利(如免费使用救护车，中医，牙医等)。
+#### **2. 国际学生保险**
 
+针对国际学生的健康保险套餐并不根据《联邦健康保险法》（KVG）运作，而是根据《联邦保险合同法》（VVG）法律运作。**因此，如果你参加了其中一个VVG套餐，你必须紧接着申请豁免KVG保险义务**。
+
+> <https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>
+
+#### \*\*\*\*
+
+#### **2. 医疗保险公司的责任**
+
+**看医生**
+
+医疗保险将负担所有由医生实施的治疗、检查、分析和拍片费用。药品和治疗方法（如中医等）分为自费和保内两种，这将取决于你所参加的医疗保险种类。
+
+^
+
+如果生病了，同学可以自行联系医生并去诊所看病。
+
+> 看病后，有些诊所会直接将账单寄给你的保险公司，那你便无需支付账单
+>
+> ^
+>
+> 有些诊所会将账单寄给你，那你需要先自行支付账单，再将账单明细寄给你的保险公司，保险公司根据你的免赔额和保险种类，将剩余部分返还给你的账户。
+
+**住医院**
+
+基本医疗保险负担你在所居住州内住院期间的治疗和普通间的费用。
+
+**医药费**
+
+基本医疗保险负担所有由医生开出的包含在瑞士联邦社会保险局医药单中的药品费用。
+
+**牙医费用**
+
+基本医疗保险不包括齿科医疗费用，但可附加购买牙医保险。
+
+^
 ^
