Update .topwrite/assets/acssz-zurich-guideline-zh-cn-12-2022.pdf, .topwrite/assets/image_1682197206050.png, .topwrite/assets/image_1682198983574.png, 27保险及豁免.md

--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -1,6 +1,8 @@
-以下信息资料主要来自ETH官网相关页面
+以下信息资料主要来自ETH官网相关页面以及Swisscare FAQ页面
 
-> <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/faq-krankenversicherung.html><https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html>
+> <https://swisscare.com/zh/product/ruishiguojixueshengjiankangbaoxian><https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/faq-krankenversicherung.html><https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html>
+>
+> <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html>
 
 ^
 
@@ -51,7 +53,37 @@
 
 ^
 
-#### **3. 豁免强制保险义务**
+#### **3**. **国际学生的保险选择**
+
+**是否有提供足够保险的廉价学生套餐**？
+
+是的，有几家公司以合理的价格为国际学生提供套餐。要了解更多信息，请访问[ETH国际学生健康保险网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543)。如果你不确定，你可以联系[交流办公室](https://ethz.ch/de/studium/non-degree-angebote/austausch-und-gaststudium.html)（如果你是交流生）或[国际学生办公室](https://ethz.ch/de/studium/international.html)（如果你是本科生或硕士生）。
+
+^
+
+！！国际学生的健康保险套餐不是根据 "联邦健康保险法"（KVG）运作的，而是根据 "联邦保险合同法"（VVG）。因此，[你必须在投保后申请豁免KVG强制健康保险](https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html)！！
+
+> The health insurance packages for international students do not operate under the Federal Health Insurance Act (KVG), rather according to the "Federal Insurance Contract Act" (VVG) law. Therefore, in case you **take one of the packages**, you must [apply for an "exemption from the Swiss health insurance obligation](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html) according to the KVG law".
+
+^
+
+**套餐对比**：
+
+![](.topwrite/assets/image_1682196432216.png)
+
+^
+
+**各产品具体报价可在ETH相关网站查看**：
+
+<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>
+
+![](.topwrite/assets/image_1682196576306.png =419)
+
+^
+
+#### **4**. **豁免强制保险义务**
+
+> <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html>
 
 **抵达瑞士后3个月内**，你需要申请豁免。
 
@@ -71,6 +103,14 @@
 
 ^
 
+**具体豁免步骤**，请见[上述网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html)第2项：
+
+With a new Swiss Student Health Insurance without income
+
+![](.topwrite/assets/image_1682197206050.png =480)
+
+^
+
 > **我在3个月前申请豁免强制健康保险，但仍未收到决定。我必须做什么**？
 > 请等待。在处理豁免申请方面有很大的延迟——可能需要9个月的时间才会收到答复！请等待！如果你被居住地的市政府威胁要参加强制保险，请联系我们。
 >
@@ -79,38 +119,64 @@
 
 ^
 
-#### **4**. **国际学生的保险选择**
+#### **5. 免赔额与共付额**
 
-**是否有提供足够保险的廉价学生套餐**？
+> <https://swisscare.com/zh/product/ruishiguojixueshengjiankangbaoxian>
 
-是的，有几家公司以合理的价格为国际学生提供套餐。要了解更多信息，请访问[ETH国际学生健康保险网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543)。如果你不确定，你可以联系[交流办公室](https://ethz.ch/de/studium/non-degree-angebote/austausch-und-gaststudium.html)（如果你是交流生）或[国际学生办公室](https://ethz.ch/de/studium/international.html)（如果你是本科生或硕士生）。
+**免赔额**：
 
-^
-
-**国际学生的健康保险选择**：
-
-![](.topwrite/assets/image_1682196432216.png)
+免赔额，又名deductible，在所选**免赔额的限额内**，保单持有人必须**自费支付**医疗服务费用。一年内如果医疗报销金额累积超出免赔额，**超出部分**将由保险公司支付（但我们仍需要支付共付额，具体请见“共付额”解释）。保险**免赔额**会在保险单上注明。
+注：**免赔额**从每年1月1日起从0开始，持续累积一年。第二年将重新从0开始累积。
 
 ^
 
-！！国际学生的健康保险套餐不是根据 "联邦健康保险法"（KVG）运作的，而是根据 "联邦保险合同法"（VVG）。因此，**你必须在投保后申请豁免KVG强制健康保险**！！
+**共付额**：
 
-> The health insurance packages for international students do not operate under the Federal Health Insurance Act (KVG), rather according to the "Federal Insurance Contract Act" (VVG) law. Therefore, in case you **take one of the packages**, you must [apply for an "exemption from the Swiss health insurance obligation](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html) according to the KVG law".
+当该日历年的累积报销金额超出免赔额后，保险公司将负担超出部分的费用，但该部分费用**依然需要我们支付10**%，每个日历年**上限为700瑞士法郎**。我们共付**超过700瑞郎后**，剩余费用将**完全**由保险公司支付。
+
+^
+
+每个日历年，医疗报销费用将首先计入免赔额（全自付）；累积超出免赔额后，将进入共付额（10%）阶段（保险公司报销90%）；受保人共付额支出达到700瑞郎后，剩余医疗费用保险公司全报销。
 
 ^
 
-**各产品具体报价可在ETH相关网站查看**：
-
-<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>
-
-![](.topwrite/assets/image_1682196576306.png =419)
+免赔额（自付额）越高，保险费越低。
 
 ^
+
+#### **6. 学联专属Swisscare折扣及福利**！
+
+> <https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
+
+Swisscare作为苏黎世学联的长期合作伙伴，在ETH和Siwsscare官网价格基础上（最低61瑞郎/月起），为苏黎世学联的所有同学提供**额外的5%学联专属折扣**。如此，就在原本就很优惠的基础上，再便宜了5%，保费最低**58瑞/月**起。
+
 ^
 
-5\. 豁免
+你可选择扫描以下二维码或者访问下方网址进入**学联专属入保通道**享受特别折扣！
 
+**学联专属优惠二维码**：
+
+![](.topwrite/assets/image_1682198983574.png)
+
+**学联专属优惠链接**：
+<https://forms.swisscare.com/#/spss?group=3018>
 
 ^
+
+**注意**：请务必通过**专属优惠链接**或**二维码**入保，否则无法识别为学联成员且无法获得学联优惠。如您已自行购保，请将您的保险Policenummer和情况说明（附上电子学联卡截图）发送给<switzerland@swisscare.com>申请转为学联成员入保）
+
 ^
+
+此外，**Swisscare特意为所有中国同学准备了中文版的保险Guidline**，以便大家轻松理解并解决保险相关难题：:attachment[acssz-zurich-guideline-zh-cn-12-2022.pdf]{src=".topwrite/assets/acssz-zurich-guideline-zh-cn-12-2022.pdf" size="515.28 kB"}
+
+^
+
+学联长期与Swisscare保持密切沟通，及时反馈同学们的问题和困难，协助提升Swisscare的服务品质。
+
+^
+
+> 附录：瑞士留学生基础医疗保险投保指南——SWISSCARE
+>
+> <https://mp.weixin.qq.com/s/bNqfac6lQLKp9KLMG8az0Q>
+
 ^
