Update .topwrite/assets/image_1682199759896.png, .topwrite/assets/image_1682199775493.png, .topwrite/assets/image_1682199817339.png, .topwrite/assets/image_1682199826817.png, .topwrite/assets/image_1682199946890.png, .topwrite/assets/image_1682200044731.png, .topwrite/assets/image_1682200100537.png, 03生活相关.md, 30学联服务.md, 31苏黎世消费.md, 32医疗相关.md

--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,1 +1,43 @@
+**学联网站**<https://www.acssz.org/>
+
+^
+
+**2023新生答疑会（新**） <https://8lrx8emp45.k.topthink.com/@fragen-antworten/00huanyingye.html>
+
+2022新生手册（旧）<https://www.acssz.org/service/booklet/>
+
+^
+
+**学联公众号**
+
+![](.topwrite/assets/image_1682199759896.png =160)
+
+**学联小红书**
+
+****
+
+![](.topwrite/assets/image_1682199946890.png =159)
+
+^
+
+**学联专属Sunrise LEBARA折扣**：<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
+
+![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
+
+^
+
+**学联专属Swisscare折扣**：
+
+<https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
+
+![](.topwrite/assets/image_1682200044731.png =271)
+
+^
+
+**学联伙伴intermezzo租房**：
+
+<https://forum.acssz.org/d/386>
+
+![](.topwrite/assets/image_1682200100537.png =258)
+
 ^
